k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: panther-dashboard
  labels:
    app.kubernetes.io/name: panther-dashboard
